[package]
name = "nes"
version = "0.1.0"
authors = ["Eduardo Sandalo Porto <eduardosandaloporto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
num-traits = "0.2"
num-derive = "0.3"
binread = "2.2"
bitfield = "0.14"
minifb = "0.23"
