[package]
name = "nes-core"
version = "0.1.0"
authors = ["Eduardo Sandalo Porto <eduardosandaloporto@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = "2.4"
num-traits = "0.2"
num-derive = "0.4"
binread = "2.2"
bitfield = "0.14"
itertools = "0.12"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
minifb = "0.25"

[[example]]
name = "nes_minifb"

[[bench]]
name = "fps"
harness = false
