[package]
name = "nes-frontend"
version = "0.1.0"
edition = "2021"
default-run = "nes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nes-core = { path = "../nes-core" }
async-std = { version = "1.12", features = ["unstable"] }
log = "0.4"
pixels = "0.11"
winit = "0.27"
winit_input_helper = "0.13"
spin_sleep = "1.1"
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }
wasm-timer = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.2"

[[bin]]
name = "nes"
