[package]
name = "nes-frontend"
version = "0.1.0"
edition = "2021"
default-run = "nes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nes-core = { path = "../nes-core" }
log = "0.4"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
instant = "0.1"
fnv = "1.0"
egui = "0.22"
egui-wgpu = "0.22"
egui-winit = { version = "0.22", default-features = false, features = ["links"] }
include_dir = "0.7"
rfd = "0.11"
tokio = { version = "1.25", features = ["sync"] }

# I need https://github.com/tuzz/game-loop/pull/10 to be merged to use the `game-loop`
# library in this project, so for the while, I'll be using an alternative repository.
game-loop = { git = "https://github.com/edusporto/game-loop", features = ["winit"] }
# game-loop = { version = "0.10", features = ["winit"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }
# wasm-timer = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3"
spin_sleep = "1.1"

[[bin]]
name = "nes"
